fixed nav spacing

--- a/style.css
+++ b/style.css
@@ -18,15 +18,6 @@ h1{
     font-size: 45px;
 }
 
-h2{
-    color: #E07A5F;
-}
-
-a{
-    font-size: 20px; 
-    color: #FAEDCB;
-}
-
 nav{
     background-color: #E07A5F;
     text-align: center;
@@ -34,6 +25,16 @@ nav{
     padding: 15px; 
 
 }
+
+a{
+    font-size: 20px; 
+    color: #FAEDCB;
+    padding: 12px;
+}
+h2{
+    color: #E07A5F;
+}
+
 
 main{
     text-align: left;
